[package]
name = "ffmpeg_cmdline_utils"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust wrapper around the commandline interface to FFMPEG. Can be used to read frames from videos into bufrers in rust."
repository = "https://github.com/Farmadupe/ffmpeg_cmdline_utils"
readme = "README.md"
keyword = ["ffmpeg"]
categories = ["multimedia::video", "api-bindings"]

[lib]
name = "ffmpeg_cmdline_utils"
path = "src/lib.rs"    
crate-type = ["lib"]  

[dependencies]
rayon = "1.5"
thiserror = "1.0"
image = "0.23"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"