[package]
name = "ffmpeg_cmdline_utils"
version = "0.1.4"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust wrapper around the commandline interface to FFMPEG. Can be used to read frames from videos into bufrers in rust."
repository = "https://github.com/Farmadupe/ffmpeg_cmdline_utils"
readme = "README.md"
keywords = ["ffmpeg"]
categories = ["multimedia::video", "api-bindings"]

[lib]
name = "ffmpeg_cmdline_utils"
path = "src/lib.rs"    
crate-type = ["lib"]  

[dependencies]
rayon = "1.5"
thiserror = "2.0"
image = "0.25"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase"]}
